feat: 更改 p 的间距 pinkhello/pinkhello.github.io.source@a0165a9b05de38663f17db3b67cfe7c6b63cf1e7

--- a/css/pinkhello.css
+++ b/css/pinkhello.css
@@ -1,3 +1,15 @@
 article .content p > img {
     display: inline-block !important;
 }
+
+article .content p > a > img {
+    display: inline-block !important;
+}
+
+article .content p {
+    display: block;
+    margin-block-start: 3px;
+    margin-block-end: 3px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
