feat: 重构 h1 和 h2 上下高度 pinkhello/pinkhello.github.io.source@255dd49ebd63a5b81b73027694070a05879fbc72

--- a/css/pinkhello.css
+++ b/css/pinkhello.css
@@ -1,15 +1,18 @@
-article .content p > img {
-    display: inline-block !important;
+h1, .h1 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
-article .content p > a > img {
-    display: inline-block !important;
+h2, .h2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 article .content p {
-    display: block;
     margin-block-start: 3px;
     margin-block-end: 3px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
 }
+article .content p  img {
+    display: inline-block !important;
+}
+
