blcokquota pinkhello/pinkhello.github.io.source@34e391f0b4ae540726cb876418e6c4aa64cc9e91

--- a/css/pinkhello.css
+++ b/css/pinkhello.css
@@ -8,6 +8,14 @@ h2, .h2 {
     margin-bottom: 1rem;
 }
 
+blockquote {
+    margin-block-start: 3px;
+    margin-block-end: 3px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+
 article .content p {
     margin-block-start: 3px;
     margin-block-end: 3px;
