--- a/css/pinkhello.css
+++ b/css/pinkhello.css
@@ -1,23 +1,16 @@
 h1, .h1 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 h2, .h2 {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-}
-
-blockquote {
-    margin-block-start: 3px;
-    margin-block-end: 3px;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 ul {
-    margin-block-start: 3px;
-    margin-block-end: 3px;
+    margin-block-start: 0.2rem;
+    margin-block-end: 0.2rem;
 }
 
 table {
@@ -34,11 +27,21 @@ td {
 }
 
 article .content p {
-    margin-block-start: 3px;
-    margin-block-end: 3px;
+    margin-block-start: 0.2rem;
+    margin-block-end: 0.2rem;
 }
 
-article .content p  img {
+article .content p img {
     display: inline-block !important;
 }
 
+article .content img, article .content video {
+    display: inline-block !important;
+}
+
+blockquote {
+    margin-block-start: 0.2rem;
+    margin-block-end: 0.2rem;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
